--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="@color/bg_background"
-tools:context=".MainActivity">
+tools:context=".MainActivity"
 android:fillViewport="true">
 
 <androidx.constraintlayout.widget.ConstraintLayout
@@ -86,6 +86,7 @@ android:fillViewport="true">
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv_date_now"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_card_rounded"
@@ -141,6 +142,7 @@ android:fillViewport="true">
                 app:layout_constraintTop_toBottomOf="@id/divider" />
 
             <TextView
+                android:id="@+id/textLoc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
