--- a/app/src/main/res/layout/activity_arah_kiblat.xml
+++ b/app/src/main/res/layout/activity_arah_kiblat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".arahkiblat.ArahKiblatActivity">
+    tools:context=".ui.arahkiblat.ArahKiblatActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
