--- a/app/src/main/res/layout/activity_waktu_sholat.xml
+++ b/app/src/main/res/layout/activity_waktu_sholat.xml
@@ -4,14 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.arahkiblat.KiblatActivity">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="testing kiblat"
-        app:layout_constraintTop_toTopOf="parent"/>
+    tools:context=".ui.waktusholat.WaktuSholatActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
