done get image compass

--- a/app/src/main/res/layout/activity_kiblat.xml
+++ b/app/src/main/res/layout/activity_kiblat.xml
@@ -25,7 +25,17 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/locationContainer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/imgCompass"
+            android:layout_width="280dp"
+            android:layout_height="280dp"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:contentDescription="Qibla Compass"/>
+
+    </FrameLayout>
 
     <!-- ================= QIBLA ANGLE ================= -->
     <LinearLayout
