--- a/app/src/main/res/layout/item_holiday.xml
+++ b/app/src/main/res/layout/item_holiday.xml
@@ -4,11 +4,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="12dp"
+    android:background="@android:color/white"
     app:cardCornerRadius="12dp"
     app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:background="@android:color/white"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
@@ -36,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Nasional"
+            android:textColor="@android:color/black"
             android:textSize="10sp"
             android:background="@drawable/bg_card_rounded"
             android:paddingVertical="2dp"/>
