--- a/app/src/main/res/drawable/bg_location.xml
+++ b/app/src/main/res/drawable/bg_location.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#2196F3"/>
+    <solid android:color="@color/header_start"/>
     <corners android:radius="28dp"/>
 </shape>
